# skeleton

./: .gitignore  Dockerfile  entry_points.ini  pyproject.toml  setup.cfg  setup.py
skeleton/: __init__.py
