[metadata]
name = skeleton-cli
version = attr: skeleton.__version__

[options]
packages = find:
install_requires = file: requirements.txt
tests_require =
    pytest

[options.entry_points]
console_scripts =
    cmd = skeleton.cmd:main

[options.packages.find]
exclude =
    test.*
    *.test
    test*

